change in login and register

--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
 
             <button id="newuserbox">New user?</button>
         
-            <button id="olduserbox">Already have an account?</button>
+            <a href="login"><button id="olduserbox">Already have an account?</button></a>
 
             <div class="form">
                 <form action="">
