--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,7 @@
         <title>Login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="/{{ url_for('static', filename='style.css') }}.css">-->
-        <link rel="stylesheet" href="/static/login.css">
+        <link rel="stylesheet" href="../static/login.css">
     </head>
 
     <body>
@@ -17,7 +16,7 @@
 
             <span class="dot"></span>
 
-            <button id="newuserbox">New user?</button>
+            <a href="register"><button id="newuserbox">New user?</button></a>
         
             <button id="olduserbox">Already have an account?</button>
 
