Backend starting code

--- a/static/contact.css
+++ b/static/contact.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/contactBG.png");
+    background-image: url("/static/imgs/contactBG.png");
     color: white;
 }
 
