--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             </li>
 
             <li class="nav-item" id="e">
-                <a href="login"><button id="login">Login</button></a>
+                <a href="loginUser"><button id="login">Login</button></a>
                 <div class="vertical" id="a"></div>
                 <a href="register"><button id="register">Register</button></a>
             </li>
@@ -149,7 +149,7 @@
 
                 <p id="home" class="links"><a href="">Home</a></p>
                 <p id="about" class="links"><a href="about">About</a></p>
-                <p id="contact" class="links"><a href="contactus">Contact Us</a></p>
+                <p id="contact" class="links"><a href="contact">Contact Us</a></p>
                 <p id="team" class="links"><a href="team">Team</a></p>
                 <p id="tech" class="links"><a href="">Technology</a></p>
                 <p id="linklast" class="links"><a href="">Careers</a></p>
