--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="../static/login.css">
     </head>
 
+    
+
     <body>
         <div class="login">
             <h1 id="head">Welcome back!</h1>
@@ -21,7 +23,8 @@
             <button id="olduserbox">Already have an account?</button>
 
             <div class="form">
-                <form action=""> 
+                <form action="loginUser" method="post"> 
+                {% csrf_token %}
 
                     <input type="email" placeholder="Your Email" id="email" name="email">
 
