--- a/static/addmeet.css
+++ b/static/addmeet.css
@@ -1,4 +1,4 @@
-ul.meetbar {
+/* ul.meetbar {
     list-style-type: none;
 }
 
@@ -96,4 +96,186 @@ body {
       font-weight: 900;
       color: #233554;
       font-family: "Lato", sans-serif;
+  } */
+
+  ul.meetbar {
+    list-style-type: none;
+    margin-top: 70px;
+}
+
+body {
+    font-family: "Lato", sans-serif;
+    background-color: #d1d1d1;
+  }
+  
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 100px;
+    left: 0;
+    background-color: #233554;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    border-top-right-radius: 15px;
+    box-shadow: 0px 15px 25px 17px rgba(0, 0, 0, 0.25);
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 38px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #f1f1f1;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover:not(.closebtn) {
+    font-size: 26px;
+    color: #f1f1f1;
+    font-weight: bolder;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    color: #233554;
+    top: -5px;
+    font-size: 36px;
+    margin-left: 150px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  nav{
+    background-color: #233554;
+     height: 85px; 
+    font-family: Open Sans;
+    font-style: normal;
+    }
+
+  #a,#b,#c,#d,#e{
+    margin-right: 150px;
+    }
+
+  .nav-item{
+    margin-top: 15px;
+    }
+
+  .insidehamburger {
+    position: absolute;
+    top: 40px;
+    width: 95%;
+    height: 55px;
+    background-color: #f1f1f1;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    }
+
+    #dot{
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      left: 140px;
+      top: 45px;
+      border-radius: 50%;
+      background: #FFFFFF;
+    
+    }
+
+    #dot1{
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      left: 50px;
+      top: 202px;
+      border-radius: 50%;
+      background: #FFFFFF;
+    
+    }
+
+  #outsideham {
+      padding-left: 20px;
+      margin-top: 50px;
+      width: 70px;
+      height: fit-content;
+      color: #f1f1f1;
+      background-color: #233554;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+  }
+
+  
+  #donebutton {
+      height: 50px;
+      width: auto;
+      background-color: #d1d1d1;
+      border: 0px;
+      font-size: 30px;
+      font-weight: 900;
+      color: #233554;
+      font-family: "Lato", sans-serif;
+      margin-left: 1300px;
+  }
+
+
+
+  #meetTitle,#description,#urgency,#meetDate,#meetTime{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 33px;
+    color: #000000;
+
+    left: 50px;
+  }
+ 
+  .titlebox,.dscbox,.urgbox,.datebox,.timebox{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 50px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    margin-left: 550px;
+  }
+  .titlebox{
+    position: absolute;
+    width: 340px;
+    height: 50px;
+    top: 270px;
+  }
+  .dscbox{
+    position: absolute;
+    width: 340px;
+    height: 100px;
+    top: 340px;
+  }
+  .urgbox{
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    top: 460px;
+    margin-left: 540px;
+  }
+  .datebox{
+    position: absolute;
+    width: 340px;
+    height: 50px;
+    top: 530px;
+  }
+  .timebox{
+    position: absolute;
+    width: 340px;
+    height: 50px;
+    top: 600px;
+  }
+  input,select{
+      border: none;
+      white-space: normal;
+line-height: normal;
   }
