--- a/templates/addAppointment.html
+++ b/templates/addAppointment.html
@@ -9,70 +9,69 @@
     <link rel="stylesheet" href="../static/addmeet.css">
 </head>
 <body>
- <nav class="navbar-light">
-        <ul class="nav justify-content-center">
-
-            <li class="nav-item" id="a">
-                <a class="text-light btn" href=""><h3>Home</h3></a>
-            </li>
-
-            <span class="dot"></span>
-
-            <li class="nav-item" id="b">
-                <a class="text-light btn" href="#"><h3>Calendar</h3></a>
-            </li>
-            <li class="nav-item" id="c">
-                <a class="text-light btn" href="contact"><h3>About</h3></a>
-            </li>
-            <li class="nav-item" id="d">
-                <a class="text-light btn" href="contact"><h3>Contact us</h3></a>
-            </li>
-            <li class="nav-item" id="d">
-                <a id="logout button" class="text-light btn" type="button" href="contact"><h3>Logout</h3></a>
-            </li>
-        </ul>
-    </nav>
+        <nav class="navbar-light">
+               <ul class="nav justify-content-center">
+       
+                   <li class="nav-item" id="a">
+                       <a class="text-light btn" href=""><h3>Home</h3></a>
+                   </li>
+       
+                   <span class="nav-item" id= "dot"></span>
+       
+                   <li class="nav-item" id="b">
+                       <a class="text-light btn" href="#"><h3>Calendar</h3></a>
+                   </li>
+                   <li class="nav-item" id="c">
+                       <a class="text-light btn" href="contact"><h3>About</h3></a>
+                   </li>
+                   <li class="nav-item" id="d">
+                       <a class="text-light btn" href="contact"><h3>Contact us</h3></a>
+                   </li>
+                   <li class="nav-item" id="d">
+                       <a id="logout button" class="text-light btn" type="button" href="contact"><h3>Logout</h3></a>
+                   </li>
+               </ul>
+           </nav>
+       
 
     <p>
-    <div id="mySidenav" class="sidenav">
-        <ul class="meetbar">
-            <div id="insideham" class="insidehamburger">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
-            </div>  
-            <li>  <a href="#">Dashboard </a></li>
-            <li>   <a href="#">Add meeting </a></li>
-            <li>   <a href="#">My meeting </a></li>
-            <li>  <a href="#">Profile </a></li>
-        </ul>  
-    </div>
-    <div id="outsideham">
-        <span class="menu" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
-    </div>
-    </p>
+                <div id="mySidenav" class="sidenav">
+                    <div class="insidehamburger">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>   
+                    </div>
+                    <span id= "dot1"></span>
+                    <ul class="meetbar">      
+                        <li>  <a href="#">Dashboard </a></li>
+                        <li>   <a href="#">Add meeting </a></li>
+                        <li>   <a href="#">My meeting </a></li>
+                        <li>  <a href="#">Profile </a></li>
+                    </ul>  
+                </div>
+                <div id="outsideham">
+                    <span class="menu" style="font-size:36px;cursor:pointer" onclick="openNav()">&#9776; </span>
+                </div>
+           </p>
     
-{% comment %} <div id="Donebtn">
-    <button id="donebutton" type ="submit" value= "Done" >
-</div>  {% endcomment %}
 
 <form action="addAppointment" method="post">
 
 {% csrf_token %}
 
-    <p>Meeting Title :<input type = "text"  name="name"></p>
-    <p>Description : <input type = "text"  name ="description"></p>
-    <p>Urgency : 
-    <select required name="urgency"> 
-        <option value="" disabled selected hidden>Choose one</option>
-        <option value="high">High</option>
-        <option value="low">Low</option>
-        <option value="medium">Medium</option>
-    </select>
-    </p>
+    <input id="meetTitle" class="titlebox" type = "text" placeholder="Meeting Title">
+    <textarea class="dscbox" id="description" type = "text" placeholder="Description"></textarea>
+    <div class= "">
+                   <label for"urgbox">Urgency</label> 
+                   <select class="urgbox" name="urgencytype" required placeholder="Urgency"> 
+                       <option value="" disabled selected hidden>Urgency</option>
+                       <option value="high">High</option>
+                       <option value="low">Low</option>
+                       <option value="medium">Medium</option>
+                    </select>
+                </p>
+            </div>
 
-    {% comment %} <input type="text" name="date"> {% endcomment %}
-
-    <p>Meeting Date : <input type="text" name="date" required pattern="\d{4}-\d{2}-\d{2}"></p>
-    <p>Meeting Timing : <input type = "text" name="time"></p>
+    <input class="datebox" id="meetDate" type="text" name="date" required pattern="\d{4}-\d{2}-\d{2}" placeholder="Meeting date (YYYY-MM-DD)">
+    <input class="timebox" id= "meetTime" type = "text" name="time" placeholder="Meeting Timing (Ex: 9:00 AM)">
 
     <input id="donebutton" class="Donebtn" type ="submit" value= "Done" >
 </form>
