--- a/static/register.css
+++ b/static/register.css
@@ -1,5 +1,13 @@
+@font-face {
+  font-family: 'Arvo';
+       src: url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 body{
-    background-image: url("imgs/Background.jpeg");
+    background-image: url("/static/img/back.jfif");
     background-size: cover;
 }
 
@@ -14,7 +22,7 @@ height: 158px;
 left: 45px;
 top: 130px;
 
-font-family: url("/static/fonts/Arvo-Bold.ttf");
+font-family: Arvo;
 font-style: normal;
 font-weight: bold;
 font-size: 64px;
@@ -35,6 +43,7 @@ background: #FFFFFF;
 }
 
 #newuserbox{  
+
   position: absolute;
 width: 215px;
 height: 65px;
@@ -42,14 +51,17 @@ left: 70px;
 top: 400px; 
 
 background: #FFFFFF;
+
+box-sizing: border-box;
 border-radius: 15px;
 
-font-family: Arvo;
-font-style: normal;
-font-weight: bold;
-font-size: 36px;
-line-height: 0px;
-color: #596496;
+  font-family: Arvo;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 0px;
+  
+  color: #596496;
 }
 
 #olduserbox{
@@ -61,16 +73,15 @@ top: 500px;
 
 border: 3px solid #FFFFFF;
 background-color: #596496;
-box-sizing: border-box;
 border-radius: 15px;
 
-  font-family: Arvo;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 0px;
-  
-  color: #FFFFFF;
+font-family: Arvo;
+font-style: normal;
+font-weight: bold;
+font-size: 36px;
+line-height: 0px;
+color: #FFFFFF;
+
 }
 
 #name,#email,#occupation,#password,#reenter{
@@ -121,7 +132,7 @@ line-height: 33px;
 #register{
   position: absolute;
 width: 197px;
-height: 47px;
+height: 55px;
 left: 990px;
 top: 575px;
 
@@ -134,5 +145,4 @@ font-style: normal;
 font-weight: 800;
 font-size: 40px;
 line-height: 0px;
-    
 }
