--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,18 @@
     
 
     <body>
+
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+
         <div class="login">
             <h1 id="head">Welcome back!</h1>
 
@@ -26,9 +38,9 @@
                 <form action="loginUser" method="post"> 
                 {% csrf_token %}
 
-                    <input type="email" placeholder="Your Email" id="email" name="email">
+                    <input type="email" placeholder="Your Email" id="email" name="email" minlength="5">
 
-                    <input type="password" placeholder="Your password" id="password" name="password"> 
+                    <input type="password" placeholder="Your password" id="password" name="password" minlength="6"> 
 
                     <button type="submit" id="login">Login</button>
                 </form>
