--- a/templates/login.html
+++ b/templates/login.html
@@ -14,16 +14,7 @@
 
     <body>
 
-        {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        </div>
-        {% endfor %}
-        {% endif %}
+        
 
         <div class="login">
             <h1 id="head">Welcome back!</h1>
@@ -47,7 +38,23 @@
             </div>
         </div>
         
-        <script src="" async defer></script>
+{% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} text-center" role="alert" id="myAlert" style="top:100px; width:230px; left:700px;">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+
+        <script>
+            setTimeout(()=>{
+            var alertId = document.getElementById('myAlert')
+            alertId.classList.add('modal')
+            },2000);
+        </script>
     </body>
 </html>
         <script src="" async defer></script>
