--- a/templates/showAppointments.html
+++ b/templates/showAppointments.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="../static/addmeet.css"> 
     </head>
 <body>
+
+    
+
      <nav class="navbar-light">
                <ul class="nav justify-content-center">
        
@@ -38,6 +41,16 @@
                </ul>
            </nav>
 
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} text-center" role="alert" id="myAlert" style="top:100px; width:230px; left:700px;">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        {% endfor %}
+        {% endif %}
 
     <!-- Sidebar -->
             <p>
@@ -107,6 +120,21 @@
             <a href="/updateAppointment/{{low.id}}"><button>Reschedule</button><a>
         </div>
     {% endfor %}
+
+<script>
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+    }
+    
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0px";
+    }
+
+    setTimeout(()=>{
+        var alertId = document.getElementById('myAlert')
+        alertId.classList.add('modal')
+    },2000);
+</script>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
