Project almost complete

--- a/static/register.css
+++ b/static/register.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url("/static/img/back.jfif");
+    background-image: url("/static/imgs/back.jfif");
     background-size: cover;
 }
 
